--- a/src/App.sass
+++ b/src/App.sass
@@ -1,3 +1,20 @@
 body 
 	background: black
 	color: white
+
+	header
+		background-color: #24292e
+		border-bottom: 1px solid #eeeeee
+		padding: 2px 0
+		ul 
+			list-style-type: none
+			display: flex
+			flex-direction: row
+			color: white
+			margin: 2px
+			li 
+				margin: 0 10px
+
+				a 
+					text-decoration: none
+					color: white
