--- a/src/App.sass
+++ b/src/App.sass
@@ -10,6 +10,8 @@ body
 			list-style-type: none
 			display: flex
 			flex-direction: row
+			align-items: center
+			justify-content: space-between
 			color: white
 			margin: 2px
 			li 
@@ -18,4 +20,14 @@ body
 				a 
 					text-decoration: none
 					color: white
+
+				h3 
+					color: white
+					font-size: 1.5rem
+					line-height: 0
+				
+				span 
+					color: red
+					font-size: 1.8rem
+					margin: 0 10px
 
