--- a/src/pages/game_components/CheckListLabel.sass
+++ b/src/pages/game_components/CheckListLabel.sass
@@ -1,22 +1,20 @@
-._label 
+div.wrong-answer, div.right-answer, div.no-answer
     display: flex
     flex-direction: row
     justify-content: flex-start
     align-items: center
     margin: 5px
     min-width: 350px
-    
+    opacity: 1
+    img 
+        width: 100px
+        height: 100px
+        margin: 5px 10px
     &:hover
         color: yellowgreen
         cursor: pointer
         img 
             opacity: 0.5
-
-    img 
-        width: 120px
-        height: 120px
-        border: 1px solid white
-        margin: 0 10px
 
     p 
         font-size: 1.2rem
@@ -24,3 +22,12 @@
         color: white
     p.blured
         color: red
+
+div.right-answer
+    p 
+        color: green !important
+
+div.wrong-answer
+    opacity: 0.5
+    p 
+        color: red !important
