--- a/src/pages/game_components/CheckListLabel.sass
+++ b/src/pages/game_components/CheckListLabel.sass
@@ -1,10 +1,9 @@
 div.wrong-answer, div.right-answer, div.no-answer
     display: flex
-    flex-direction: row
+    flex-direction: column
     justify-content: flex-start
     align-items: center
     margin: 5px
-    min-width: 350px
     opacity: 1
     img 
         width: 80px
