--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -4,6 +4,7 @@
 @import './components/home'
 @import './components/game'
 @import './components/checkListLabel'
+@import './components/finishGame'
 
 
 
